 cnp-mitre-t1552-block-cloud-instance-metadata-access-from-pods-fmmse2w.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-mitre-t1552-block-cloud-instance-metadata-access-from-pods"-xq9e0h6
  namespace: kube-system
spec:
  description: "The policy will block access to cloud metadata ips from containers"
  endpointSelector:
    matchLabels:
      k8s-app: gcp-compute-persistent-disk-csi-driver
      pod-template-generation: 1
      controller-revision-hash: 56fd47777c
  egress:
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 169.254.169.254/32
      - 169.254.170.2/32
